--- a/polling.html
+++ b/polling.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Callbacks</title>
+<title>Polling</title>
 <link rel="stylesheet" href="style.css" />
 <code id="status">Ready</code>
 <div id="myObject" class="absolute inline-block w-24 h-24 bg-indigo-500"></div>
